<resources>
    <string name="app_name">ProyectoFin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="Titulo">Exposiciones</string>

    <string name="anadirArtista">Añadir Artista</string>
    <string name="anadirExposiciones">Añadir Exposiciones</string>
    <string name="anadirTrabajos">Añadir Trabajos</string>
    <string name="anadirComentarios">Añadir Comentarios</string>
    <string name="anadirExponen">Añadir Exponen</string>
</resources>